install/kubectl/album-store-k3d-pod.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: "album-store"
  name: "album-store"
  annotations:
    prometheus.io/probe: "true"
    prometheus.io/probe-path: /status
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "9080"
  labels:
    app.kubernetes.io/instance: "album-store"
    app.kubernetes.io/name: "album-store"
    app.kubernetes.io/version: "0.1.0"
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - protocol: TCP
      name: http
      port: 9080
      targetPort: 9080
  selector:
    app.kubernetes.io/instance: "album-store"
    app.kubernetes.io/name: "album-store"
    app.kubernetes.io/version: "0.1.0"
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    test:
      "album-store"
    app.kubernetes.io/component: "album-store"
    app.kubernetes.io/instance: "album-store"
    app.kubernetes.io/name: "album-store"
    app.kubernetes.io/version: "0.1.0"
  name: "album-store"
  namespace: "album-store"
spec:
  containers:
    - name: "album-store"
      image: registry.local:54094/album-store:0.2.2 # use the cluster internal name to reference registry
      imagePullPolicy: Always
      ports:
        - name: http
          containerPort: 9080
          protocol: TCP
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
      livenessProbe:
        httpGet:
          path: /status
          port: http
        initialDelaySeconds: 1
        periodSeconds: 5
  dnsPolicy: ClusterFirst # must be `ClusterFirst` to allow nginx to route to it via the ingress
  restartPolicy: Always
  terminationGracePeriodSeconds: 30
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: album-store-virtual-service
  namespace: album-store
spec:
  gateways:
    - album-store-gateway
  hosts:
    - album-store.local
  http:
    - route:
        - destination:
            host: album-store
            port:
              number: 9080
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: album-store-gateway
  namespace: album-store
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - album-store.local
      port:
        name: http-album-store
        number: 80
        protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: album-store-destination-rule
  namespace: album-store
spec:
  host: album-store
  trafficPolicy:
    tls:
      mode: DISABLE
