install/kubectl/proxy-service-k3d-pod.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: "proxy-service"
  name: "proxy-service"
  annotations:
    prometheus.io/probe: "true"
    prometheus.io/probe-path: /status
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "9070"
  labels:
    app.kubernetes.io/instance: "proxy-service"
    app.kubernetes.io/name: "proxy-service"
    app.kubernetes.io/version: "0.1.0"
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - protocol: TCP
      name: http
      port: 9070
      targetPort: 9070
  selector:
    app.kubernetes.io/instance: "proxy-service"
    app.kubernetes.io/name: "proxy-service"
    app.kubernetes.io/version: "0.1.0"
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/component: "proxy-service"
    app.kubernetes.io/instance: "proxy-service"
    app.kubernetes.io/name: "proxy-service"
    app.kubernetes.io/version: "0.1.0"
  name: "proxy-service"
  namespace: "proxy-service"
spec:
  containers:
    - name: "proxy-service"
      image: registry.local:54094/proxy-service:0.2.2do # use the cluster internal name to reference registry
      imagePullPolicy: Always
      ports:
        - name: http
          containerPort: 9070
          protocol: TCP
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
      livenessProbe:
        httpGet:
          path: /status
          port: http
        initialDelaySeconds: 1
        periodSeconds: 5
  dnsPolicy: ClusterFirst # must be `ClusterFirst` to allow nginx to route to it via the ingress
  restartPolicy: Always
  terminationGracePeriodSeconds: 30
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: proxy-service-virtual-service
  namespace: proxy-service
spec:
  gateways:
    - proxy-service-gateway
  hosts:
    - proxy-service.local
  http:
    - route:
        - destination:
            host: proxy-service
            port:
              number: 9070
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: proxy-service-gateway
  namespace: proxy-service
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - proxy-service.local
      port:
        name: http-proxy-service
        number: 80
        protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: proxy-service-destination-rule
  namespace: proxy-service
spec:
  host: proxy-service
  trafficPolicy:
    tls:
      mode: DISABLE
